New branch to test shooting

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,6 @@
         "stdio.h": "c",
         "player.h": "c",
         "entities.h": "c"
-    }
+    },
+    "C_Cpp.errorSquiggles": "disabled"
 }
