--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,8 @@
         "window.h": "c",
         "stdio.h": "c",
         "player.h": "c",
-        "entities.h": "c"
+        "entities.h": "c",
+        "cmath": "c"
     },
     "C_Cpp.errorSquiggles": "disabled"
 }
